--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html ng-app="App">
     <head>
-        <title>Pega Contatos</title>
+        <title>Avail Much</title>
         <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-
-        <!-- styles -->
+        <!-- styles (bootstrap/fontawesome/bootswatch) -->
 	    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
 	    <!-- custom styles -->
 	    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
@@ -17,7 +17,7 @@
     	<div class="container">
     		<div class="row">
     			<div class="col-md-8 col-md-offset-2">
-    				
+
     				<h1>Avail Much</h1>
     				<ng-view></ng-view>
 
@@ -35,7 +35,7 @@
 
         <script type="text/javascript" src="app/app.js"></script>
         <script type="text/javascript" src="app/config/config.js"></script>
-        <script type="text/javascript" src="app/routes/customerRoutes.js"></script>
+        <script type="text/javascript" src="app/routes/routes.js"></script>
         <script type="text/javascript" src="app/controllers/customerController.js"></script>
         <script type="text/javascript" src="app/services/customerFactory.js"></script>
     </body>
