adds icons to ListRequests, adds layout to Groups, adds /fonts for FA

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- styles (bootstrap/fontawesome/bootswatch) -->
 	    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-	    <link href="assets/css/bootstrap.flatly.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
+	    <link href="assets/css/bootswatch.flatly.min.css" rel="stylesheet">
 	    <!-- custom styles -->
 	    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
@@ -36,7 +36,5 @@
         <script type="text/javascript" src="app/app.js"></script>
         <script type="text/javascript" src="app/config/config.js"></script>
         <script type="text/javascript" src="app/routes/routes.js"></script>
-        <script type="text/javascript" src="app/controllers/customerController.js"></script>
-        <script type="text/javascript" src="app/services/customerFactory.js"></script>
     </body>
 </html>
