--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html ng-app="App">
     <head>
-        <title>Avail Much</title>
+        <title>Pega Contatos</title>
         <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-        <!-- styles (bootstrap/fontawesome/bootswatch) -->
-	    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-	    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-	    <link href="assets/css/bootstrap.flatly.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
+
+        <!-- styles -->
+	    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	    <!-- custom styles -->
 	    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
 
     </head>
 
     <body>
-    	<div class="container">
-    		<div class="row">
+    	<div class="container-fluid">
+            <div ng-include="'app/templates/navbar.html'"></div>
+    		<div class="row" style="margin-top: 55px;">
     			<div class="col-md-8 col-md-offset-2">
-
     				<h1>Avail Much</h1>
     				<ng-view></ng-view>
 
@@ -25,7 +25,7 @@
     		</div>
     	</div> <!-- /container -->
 
-        <!-- scripts -->
+          <!-- scripts -->
 	    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -35,8 +35,7 @@
 
         <script type="text/javascript" src="app/app.js"></script>
         <script type="text/javascript" src="app/config/config.js"></script>
-        <script type="text/javascript" src="app/routes/routes.js"></script>
-        <script type="text/javascript" src="app/controllers/customerController.js"></script>
-        <script type="text/javascript" src="app/services/customerFactory.js"></script>
+        <script type="text/javascript" src="app/routes/routes.js"></script>g
+
     </body>
 </html>
