added share floating button

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="App">
     <head>
-        <title>Pega Contatos</title>
+        <title>Avails Much</title>
         <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
         <!-- styles (bootstrap/fontawesome/bootswatch) -->
@@ -13,7 +13,7 @@
 
     </head>
 
-    <body>
+    <body ng-controller="routeController">
     	<div class="container-fluid">
           <div ng-include="'app/templates/navbar.html'"></div>
             <div class="row" style="margin-top: 55px;">
